<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"

    tools:context=".ui.auth.LoginActivity">

    <!-- Welcome Message -->
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome !"
        android:textSize="24sp"
        android:textColor="#2C3E50"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <!-- Username Input -->
    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:background="@drawable/edit_text_border"
        android:padding="10dp"
        android:layout_marginBottom="16dp"
        android:textColor="#34495E"
        android:textSize="16sp"/>

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_border"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="#34495E"
        android:textSize="16sp"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:padding="12dp"
        android:layout_marginTop="20dp"/>

    <!-- Registration Redirect Text -->
    <TextView
        android:id="@+id/registerRedirectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register_here"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textStyle="bold" />

</LinearLayout>
